# internal/models/media_type.go
@@ -1,0 +1,6 @@
+package models
+
+type MediaType struct {
+	MediaTypeId int     `json:"media_type_id"`
+	Name        *string `json:"name,omitempty"`
+}
