# internal/models/playlist.go
@@ -1,0 +1,6 @@
+package models
+
+type Playlist struct {
+	PlaylistId int     `json:"playlist_id"`
+	Name       *string `json:"name,omitempty"`
+}
