# internal/models/playlist_track.go
@@ -1,0 +1,6 @@
+package models
+
+type PlaylistTrack struct {
+	PlaylistId int `json:"playlist_id"`
+	TrackId    int `json:"track_id"`
+}
